--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
         try {
             // Updated to use the correct Netlify function path
-            const response = await fetch('/.netlify/functions/chat', {
+            const response = await fetch('/api/chat', {
                 method: 'POST',
                 headers: { 'Content-Type': 'application/json' },
                 body: JSON.stringify({ message: text })
@@ -185,5 +185,6 @@
     }
 </script></body>
 </html>
+
 
 
